test/shouldnt-compile/const-set-uv.cpp
#include "common.hpp"


void check() {
  const auto es1 = Enums{};
  es1.set_underlying_value(1);
}
